--- a/application/modules/planner/views/scripts/forms/color_button.phtml
+++ b/application/modules/planner/views/scripts/forms/color_button.phtml
@@ -3,8 +3,8 @@
       $selectedStatus1 = $this->selectedStatus1;
       $selectedStatus2 = $this->selectedStatus2;
     ?>
-<div title="<?php echo $status['description']; ?>" class="day-status-color <?php if ($selectedStatus1 == $status['id'] || $selectedStatus2 == $status['id']): ?> active<?php endif; ?>" style="background-color: #<?php echo $status['color_hex']; ?>;"
+<div title="<?php echo $status['color']; ?>" class="day-status-color <?php if ($selectedStatus1 == $status['id'] || $selectedStatus2 == $status['id']): ?> active<?php endif; ?>" style="background-color: #<?php echo $status['color_hex']; ?>;"
      data-color="<?php echo $status['color']; ?>"
      data-status="<?php echo $status['id']; ?>"
-><?php echo $status['color']; ?></div>
+><?php echo $status['description']; ?></div>
 <?php endif; ?>
