--- a/application/modules/planner/views/scripts/planning/_blocks/group_row.phtml
+++ b/application/modules/planner/views/scripts/planning/_blocks/group_row.phtml
@@ -3,10 +3,27 @@
         id="<?php echo $this->group['id']; ?>"
         data-user-id="<?php echo $this->group['id']; ?>"
         >
-    <?php $this->users = $this->group['users']; ?>
+    <?php
+        $this->users = $this->group['users'];
+        $nextWeekYear = $this->nextWeekYear;
+        $prevWeekYear = $this->prevWeekYear;
+        $currentWeekYear = $this->currentWeekYear;
+    ?>
     <div class="user_row_container">
         <span class="span4 block-history">
-            <a href="<?php echo $this->url(array('action' => 'get-more-history'), 'planner', true); ?>" class="no-action show-more-history">History</a>
+            <a href="<?php echo $this->url(array('controller' => 'planning', 'action' => 'index', 'year' => $prevWeekYear['year'], 'week' => $prevWeekYear['week']), 'planner', true); ?>" rel="tooltip" class="bootstrab-tooltip get-week-details" title="<?php echo 'Year:' . $prevWeekYear['year'] . ' week:' . $prevWeekYear['week']; ?>">
+                < Prev Week
+            </a>
+            <a href="<?php echo $this->url(array('controller' => 'planning', 'action' => 'index', 'year' => $currentWeekYear['year'], 'week' => $currentWeekYear['week']), 'planner', true); ?>" class="show-more-history"  title="<?php echo 'Year:' . $currentWeekYear['year'] . ' week:' . $currentWeekYear['week']; ?>">
+                <?php if ($currentWeekYear['week'] != $this->week): ?>
+                | Actual Week |
+                <?php else : ?>
+                | ... |
+                <?php endif; ?>
+            </a>
+            <a href="<?php echo $this->url(array('controller' => 'planning', 'action' => 'index', 'year' => $nextWeekYear['year'], 'week' => $nextWeekYear['week']), 'planner', true); ?>" rel="tooltip" class="bootstrab-tooltip get-week-details" title="<?php echo 'Year:' . $nextWeekYear['year'] . ' week:' . $nextWeekYear['week']; ?>">
+                 Next Week >
+            </a>
                 <div class="history-container-scrollable">
                     <div class="history-container">
                         <?php echo $this->render('_blocks/history.phtml'); ?>
@@ -35,7 +52,7 @@
                         </a>
                     </th>
                     <th  style="background-color: #<?php echo $this->group['color'];?>" >
-                        <a href="<?php echo $this->url(array('action' => 'get-week-details'), 'planner', true); ?>" rel="tooltip" class="bootstrab-tooltip no-action get-week-details" data-original-title="Look next week" data-year="<?php echo $this->nextWeekYear; ?>" data-week="<?php echo $this->nextWeek; ?>" title="<?php echo $date; ?>">
+                        <a href="<?php echo $this->url(array('controller' => 'planning', 'action' => 'index', 'year' => $nextWeekYear['year'], 'week' => $nextWeekYear['week']), 'planner', true); ?>" rel="tooltip" class="bootstrab-tooltip get-week-details" title="<?php echo 'Year:' . $nextWeekYear['year'] . ' week:' . $nextWeekYear['week']; ?>">
                            Next Week <?php //echo $week; ?>
                         </a>
                     </th>
