--- a/application/modules/planner/views/scripts/forms/edit-day.phtml
+++ b/application/modules/planner/views/scripts/forms/edit-day.phtml
@@ -1,18 +1,23 @@
 <div class="alert alert-error" style="display: none;"></div>
 <div class="alert alert-success" style="display: none;"></div>
 <?php echo $this->element->id; ?>
-<?php echo $this->element->status_main; ?>
-<?php echo $this->element->status; ?>
+<?php echo $this->element->user_id; ?>
+<?php echo $this->element->group_id; ?>
+<?php echo $this->element->date; ?>
+<?php echo $this->element->status1; ?>
+<?php echo $this->element->status2; ?>
 <?php
 $status = new Application_Model_Status();
 $statuses = $status->getAllStatus();
 
-$selectedStatus1 = $this->element->status_main->getValue();
-$selectedStatus2 = $this->element->status->getValue();
+$selectedStatus1 = $this->element->status1->getValue();
+$selectedStatus2 = $this->element->status2->getValue();
 $this->selectedStatus1 = $selectedStatus1;
 $this->selectedStatus2 = $selectedStatus2;
 ?>
-<?php if ($selectedStatus1 != 1) ://white color status ?>
+<?php echo $this->element->time_start; ?>
+<?php echo $this->element->time_end; ?>
+<?php if (0 && $selectedStatus1 != 1) ://white color status //switch off because broken logic?>
 <div><h3>Day Work Time</h3></div>
 <table>
     <tr>
