--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,6 +46,16 @@ form.form-mini {
     vertical-align: top;
     padding: 3px;
 }
+
+.regular-holidays .label {
+    margin: 2px 2px;
+    float: left;
+}
+.create-regular-holiday {
+    position: absolute;
+    margin-left: -33px;
+}
+
 .create-group {
     position: absolute;
     margin-left: -40px;
@@ -96,6 +106,11 @@ form.form-mini {
 }
 .set-time-hour, .set-time-min {
     width: 16px;
+}
+.group-work-days-planning .header {
+    border-top: 1px solid #808080;
+    margin-top: 10px;
+    padding-top: 5px;
 }
 .group-planning-weeks tbody form {
     margin: 0px;
