add/remove group holidays

--- a/application/modules/calendar/views/scripts/index/index.ajax.phtml
+++ b/application/modules/calendar/views/scripts/index/index.ajax.phtml
@@ -42,6 +42,7 @@ $oldSelectedDates = implode(',', $this->oldSelectedDates);
     data-show-date="<?php echo $showDate->format('Y-m-d'); ?>"
     data-container-id="<?php echo $this->containerId; ?>"
     data-editable="<?php echo $this->editable; ?>"
+    data-max-select="<?php echo $this->maxSelect; ?>"
 >
     <div class="calendar-navigation">
         <div class="navigation-month pull-left input-prepend input-append">
