--- a/application/modules/planner/views/scripts/group-settings/index.phtml
+++ b/application/modules/planner/views/scripts/group-settings/index.phtml
@@ -146,29 +146,35 @@ $maxFreePeopleAction = $this->url(array('controller' => 'group-settings', 'actio
         <tbody>
         <tr>
             <td>
-                <button class="btn btn-mini btn-success create-regular-holiday" data-old-selected-dates="2012-12-12,2012-12-13,2012-12-19"><i class="icon-plus-sign icon-white"></i></button>
+                <?php
+                    $holidays = array();
+                    foreach ($this->generalHolidays as $holiday) {
+                        $date = $holiday['holiday_date'];
+                        $holidays[$date] = $date;
+                    }
+                ?>
+                <button
+                    class="btn btn-mini btn-success create-holiday"
+                    data-old-selected-dates="<?php echo implode(',', $holidays); ?>"
+                ><i class="icon-plus-sign icon-white"></i></button>
                 Special free days per year
                 <a href="#" class="show-tooltip no-action" data-original-title="Christmas, Eastern, etc."><i class="icon-info-sign"></i></a>:
             </td>
             <td style="width: 600px;">
-                <span class="label label-info">
-                    22.04.2012 Eastern
-                    <a href="#" class="show-tooltip no-action" data-original-title="Remove">
-                        <i class="icon-remove icon-white"></i>
-                    </a>
-                </span>
-                <span class="label label-info">
-                    13.12.2012 Christmas
-                    <a href="#" class="show-tooltip no-action" data-original-title="Remove">
-                        <i class="icon-remove icon-white"></i>
-                    </a>
-                </span>
-                <span class="label label-info">
-                    01.05.2013 Pinksteren
-                    <a href="#" class="show-tooltip no-action" data-original-title="Remove">
-                        <i class="icon-remove icon-white"></i>
-                    </a>
-                </span>
+                <?php foreach ($this->generalHolidays as $holiday): ?>
+                    <?php
+                        try {
+                            $date = new DateTime($holiday['holiday_date']);
+                            $date = $date->format('d.m.Y');
+                        } catch (Exception $e) { $date = $start['holiday_date']; }
+                    ?>
+                    <span class="label label-info">
+                        <?php echo $date; ?> <?php echo $holiday['holiday_name']; ?>
+                        <a href="#" class="show-tooltip no-action remove-holiday" data-original-title="Remove" data-holiday="<?php echo $holiday['id']; ?>" data-holiday-name="<?php echo $holiday['holiday_name']; ?>">
+                            <i class="icon-remove icon-white"></i>
+                        </a>
+                    </span>
+                <?php endforeach; ?>
             </td>
         </tr>
         </tbody>
@@ -214,7 +220,6 @@ $maxFreePeopleAction = $this->url(array('controller' => 'group-settings', 'actio
             class="module-calendar"
             data-selected-dates=""
             data-container-id="exceptions-calendar-container"
-            data-editable="1"
         ></div>
         </div>
         <div class="pull-left">
@@ -227,6 +232,32 @@ $maxFreePeopleAction = $this->url(array('controller' => 'group-settings', 'actio
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-success button-approve" id='submit-group-exceptions'>Save</button>
+        <button class="btn btn-success" id='submit-group-exceptions'>Save</button>
+    </div>
+</div>
+
+<div class="modal hide popup" id="add-group-holidays-modal">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+        <h3>Regular holidays</h3>
+    </div>
+    <div class="modal-body">
+        <div id="holidays-calendar-container">
+            <div
+                class="module-calendar"
+                data-selected-dates=""
+                data-container-id="holidays-calendar-container"
+                data-editable="1"
+                data-max-select="1"
+            ></div>
+        </div>
+        <div class="pull-left">
+            <span class="help-block">* You can select only one day</span>
+            <input type="hidden" name="group" value="" class="group-id">
+            Holiday name: <input type="text" name="holiday_name" value="0" class="holiday_name">
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-success" id='submit-group-holidays'>Save</button>
     </div>
 </div>
