fix overflow on alert page

--- a/application/modules/planner/views/scripts/alerts/index.phtml
+++ b/application/modules/planner/views/scripts/alerts/index.phtml
@@ -46,8 +46,10 @@
     </div>
     <div class="alert-1-block pull-left">
         <div class="div-row">
-            <div class="underflow">
-                Previous years history total
+            <div class="underflow-container">
+                <div class="underflow">
+                    Previous years history total
+                </div>
             </div>
         </div>
         <div class="alert-1-year-table">
