added weekend day to group planning. removed groups from checking page if not work day today

--- a/application/modules/planner/views/scripts/group-settings/get-group-planning.phtml
+++ b/application/modules/planner/views/scripts/group-settings/get-group-planning.phtml
@@ -1,5 +1,5 @@
 <?php if ( ! empty($this->group)): ?>
-    <div class="span12 group-planning">
+    <div class="group-planning">
         <div class="span5">
             <form class="form-inline">
                 <?php
@@ -36,22 +36,25 @@
             <thead>
             <tr>
                 <th class="span2">
-                    Monday
+                    Maandag
                 </th>
                 <th class="span2">
-                    Tuesday
+                    Dinsdag
                 </th>
                 <th class="span2">
-                    Wednesday
+                    Dinsdag
                 </th>
                 <th class="span2">
-                    Thursday
+                    Donderdag
                 </th>
                 <th class="span2">
-                    Friday
+                    Vrijdag
                 </th>
                 <th class="span2">
-                    Saturday
+                    Zaterdag
+                </th>
+                <th class="span2">
+                    Zondag
                 </th>
             </tr>
             </thead>
