--- a/application/modules/planner/views/scripts/group-settings/index.phtml
+++ b/application/modules/planner/views/scripts/group-settings/index.phtml
@@ -182,7 +182,7 @@ $maxFreePeopleAction = $this->url(array('controller' => 'group-settings', 'actio
     </table>
 </div>
 
-<div class="span12 group-work-days-planning">
+<div class="span12 group-work-days-planning width-full">
     <div class="header">
         <strong>Select group for planning:</strong>
         <select name="group-planning" id="group-planning">
