--- a/application/modules/calendar/views/scripts/index/index.ajax.phtml
+++ b/application/modules/calendar/views/scripts/index/index.ajax.phtml
@@ -6,18 +6,12 @@ $showYear  = $showDate->format('Y');
 
 $start = clone $showDate;
 $start->setDate($start->format('Y'), $start->format('m'), 1)->setTime(0, 0, 0); // set first day in month
-$dayOffset = $start->format('w'); // 0 - sunday
-if ( ! $dayOffset) {
-    $dayOffset = 7;
-}
+$dayOffset = $start->format('N'); // 7 - sunday
 $start->modify('-' . --$dayOffset . ' days');
 
 $end = clone $showDate;
 $end->setDate($end->format('Y'), $end->format('m'), $end->format('t'))->setTime(0, 0, 0); // set last day in month
-$dayOffset = $end->format('w'); // 0 - sunday
-if ( ! $dayOffset) {
-    $dayOffset = 7;
-}
+$dayOffset = $end->format('N'); // 7 - sunday
 $dayOffset = 7 - $dayOffset; // how much days left to the end of week
 $end->modify('+' . $dayOffset . ' days');
 
@@ -83,7 +77,7 @@ $oldSelectedDates = implode(',', $this->oldSelectedDates);
                 $year      = $start->format('Y');
                 $month     = $start->format('m');
                 $day       = $start->format('d');
-                $dayNumber = $start->format('w'); // 0 - sunday
+                $dayNumber = $start->format('N'); // 7 - sunday
                 $timestamp = $start->getTimestamp();
                 if ( ! $dayNumber) { $dayNumber = 7; }
 
